--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "@angular/platform-browser": "~10.0.5",
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
+    "@types/lodash": "^4.14.158",
+    "ag-grid-angular": "^23.2.1",
+    "ag-grid-community": "^23.2.1",
+    "angular-in-memory-web-api": "^0.11.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
